--- a/webpack-reactjs-typescript/renderer/package.json
+++ b/webpack-reactjs-typescript/renderer/package.json
@@ -1,14 +1,4 @@
 {
-  "name": "@opencv-electron/plain-js",
-  "version": "0.0.0",
-  "description": "Example for using opencv4nodejs with electron.",
-  "keywords": [
-    "opencv",
-    "cv",
-    "electron",
-    "image",
-    "filter"
-  ],
   "author": "justadudewhohacks",
   "license": "MIT",
   "repository": {
@@ -22,11 +12,19 @@
   "scripts": {
     "electron-rebuild": "electron-rebuild -w opencv4nodejs",
     "install": "npm run electron-rebuild",
-    "start": "electron main.js"
+    "start": "webpack-dev-server"
   },
   "dependencies": {
-    "electron": "^1.8.4",
+    "@types/react": "^16.0.37",
+    "@types/react-dom": "^16.0.4",
     "electron-rebuild": "^1.7.3",
-    "opencv4nodejs": "^4.2.1"
+    "node-loader": "^0.6.0",
+    "opencv4nodejs": "^4.2.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-hot-loader": "^3.1.3",
+    "ts-loader": "^3.5.0",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.1"
   }
 }
