--- a/webpack-reactjs/package.json
+++ b/webpack-reactjs/package.json
@@ -20,25 +20,9 @@
   },
   "homepage": "https://github.com/justadudewhohacks/opencv-electron#readme",
   "scripts": {
-    "electron-rebuild": "electron-rebuild -w opencv4nodejs",
-    "install": "npm run electron-rebuild",
-    "start": "electron main.js",
-    "dev": "webpack-dev-server"
+    "start": "electron ./main/main.js"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "electron": "^1.8.4",
-    "electron-rebuild": "^1.7.3",
-    "node-loader": "^0.6.0",
-    "opencv4nodejs": "^3.5.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^3.1.3",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "electron": "^1.8.4"
   }
 }
